  DefaultEntityConnectionServer creates and holds a Registry, CredentialServer as well, registry unexported on exit
  Replaced more foreach loops with indexed loops
  AbstractServer now sets remote client host instead of AbstractRemoteConnection, which was too late when using a login proxy
  AbstractRemoteEntityConnection socket factory usage refactored
  ConnectionPool.getDatabase() added, implementations refactored
  DefaultRemoteEntityConnection constructors tidied up
  MethodLogger public api reduced
0.11.0
  Major surgery, Entities and EntityConditions now instance based (unfinished, javadocs suffering)
  ConnectionRequest.getParameters() added, used to specify the required domain model class
  Minor improvements to the above
  Javadocs fixed
  Entities.registerDomain() added
  TestDomain cleanup
  DefultEntityConnectionServer.WEB_SERVER_DOMAIN_ID configuration property added, EntityRESTServiceTest fixed
  EntityConnectionProvider.getConditions() added, used where applicable
  EntityPanelProvider, re-added a couple of convenient constructors
  EntityUtil removed, methods moved to Entities, EntityBeanMapper moved up
  Entities, all public methods now final
  Ant build target clean_lib added
  EntityApplicationPanel/EntityApplicationView.initializeDomainEntities() renamed to initializeEntities()
  Entities.registerDomain() called by client and server when instantiated, no longer called in constructor
  NumberField grouping separator implemented
  NumberField refactored, now relies on NumberFormat for formatting and validation
  NumberField, SizedDocument minor refactoring
  NumberDocumentFilter no longer concerns itself with valid characters, the format deals with it, redundant isValid() removed
  DefaultEntity.initializeReferencedKey() bug fixed, used isNullable() for single column keys when isForeignKeyNull() did not
  NumberDocumentFilter.getNumber() renamed to parseNumber()
  EntityGeneratorModel updated according to recent changes
  Minor refactoring